Chore: fix image in work slide on mobile

--- a/src/components/WorkSlide/WorkSlide.module.css
+++ b/src/components/WorkSlide/WorkSlide.module.css
@@ -1,15 +1,16 @@
 .media {
   flex: 2.5;
   height: 100%;
-  background-color: var(--colors-silver);
+  background-color: var(--colors-black);
   order: 0;
 
   img, video {
+    background-color: var(--colors-black);
     object-fit: cover;
     margin-bottom: -2px;
     height: 100%;
-    transform: scale(1);
-    transition: transform 1s ease;
+    min-width: 105%;
+    margin-left: -2.5%;
   }
 
   @media screen and (min-width: 1000px) {
